# aiclient-api

./: .gitignore  Cargo.toml  LICENSE  README.md  UNIFIED_FORMAT.md  USAGE_TRACKING.md  config.example.toml
docs/superpowers/plans/: 2026-03-25-aiclient-api-implementation.md
docs/superpowers/specs/: 2026-03-25-aiclient-api-design.md
src/: lib.rs  main.rs
src/auth/: copilot.rs  kiro.rs  mod.rs  token_store.rs
src/cli/: auth.rs  commands.rs  config_cmd.rs  logs.rs  mod.rs  models.rs  provider_cmd.rs  restart.rs  start.rs  status.rs  stop.rs
src/config/: mod.rs  types.rs
src/convert/: anthropic_types.rs  from_anthropic.rs  from_openai.rs  mod.rs  openai_types.rs  stream.rs  to_anthropic.rs  to_openai.rs
src/daemon/: control.rs  mod.rs
src/providers/: mod.rs  router.rs
src/providers/copilot/: client.rs  headers.rs  mod.rs  models.rs
src/providers/kiro/: client.rs  cw_types.rs  eventstream.rs  mod.rs  models.rs
src/routes/: anthropic.rs  health.rs  mod.rs  openai.rs  usage.rs
src/server/: middleware.rs  mod.rs  state.rs
src/usage/: mod.rs  tracker.rs
src/util/: error.rs  machine_id.rs  mod.rs  stream.rs  xdg.rs
tests/: auth_test.rs  config_test.rs  convert_test.rs  error_test.rs  integration_test.rs  routes_test.rs  stream_test.rs  util_test.rs
