[package]
name = "aiclient-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "catch-panic", "request-id", "trace", "util"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
bytes = "1"

# Config hot-reload
arc-swap = "1"

# Auth & crypto
sha2 = "0.10"
mac_address = "1"
uuid = { version = "1", features = ["v4"] }
open = "5"
base64 = "0.22"

# XDG dirs
dirs = "6"

# Daemon
daemonize = "0.5"

# Unix socket
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-util = { version = "0.7" }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Self-update
self_update = "0.41"

# System
libc = "0.2"

[dev-dependencies]
tempfile = "3"
axum-test = "19"
